left align sidebar + grammer fixes

--- a/resume/resume.css
+++ b/resume/resume.css
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+    font-size: 1.1em;
     margin: 50px auto;
     width: 850px;
     height: 1200px;
@@ -122,8 +123,8 @@ ul #description li {
 }
 
 #contact, #education {
-    text-align: center;
-    margin: 20px 0 20px 0;
+    text-align: left;
+    margin: 20px 0 20px 20px;
 }
 
 #skills, #interests {
@@ -137,6 +138,11 @@ ul #description li {
 
 #langdesc {
     font-size: 1.1em;
+}
+
+#langlist {
+    margin: 5px 10px 5px 10px;
+    list-style-type: disc;
 }
 
 #download {
